# fireside-chat

./: .gitignore  Cargo.toml  Makefile  README-MODELS.md  README.md  candle-chat-23080480c2c06557f4a03a2f7bf42e5707959ba1f2ef19dafb0a1264544a734fc889db4c69ebbd09a2ee075bedb0c327.js  candle-chat-23080480c2c06557f4a03a2f7bf42e5707959ba1f2ef19dafb0a1264544a734fc889db4c69ebbd09a2ee075bedb0c327_bg.wasm  frontend-7ed3a663409cb8d.js  frontend-7ed3a663409cb8d_bg.wasm  frontend-c55a28c717d21fe4.js  frontend-c55a28c717d21fe4_bg.wasm  frontend-fa1fe80b796481a8.js  frontend-fa1fe80b796481a8_bg.wasm  index.html  style-205ec733f0fc09fb.css  style-d44343a0f7e31df.css  style-dabdbbc29d8dc714.css  style-fe27b7e8086d50c7.css  test.md
.github/workflows/: build.yml  gh-pages.yaml  release-deb.yaml  release-mac.yaml  release.yaml  test.yaml
backend/: .env-example  Cargo.toml  Shuttle.toml  config_inference.yaml  config_model.yaml  error.txt  test.md
backend/src/: lib.rs  main.rs
backend/src/llm/: infer.rs  inference_args.rs  load_model.rs  mod.rs  prompt_template.rs  text_generation.rs
backend/src/mistral/: infer.rs  mod.rs  types.rs  utils.rs
backend/src/mistral/types/: config.rs  inference_args.rs  load_model.rs  mod.rs  prompt_template.rs  text_generation.rs
backend/src/server/: app.rs  chat.rs  mod.rs  types.rs
backend/src/server/rest/: inference.rs  mod.rs  model.rs  model_download.rs  model_list.rs  role_list.rs  routes.rs
backend/src/server/websocket/: handler.rs  mod.rs  utils.rs
backend/src/server/websocket/utils/: handler.rs  mistral.rs  mod.rs
backend/src/utilities/: cache_path.rs  config_path.rs  mod.rs
backend/src/websockets/: mod.rs  server.rs  types.rs  utils.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/database/: conversation.rs  engagement.rs  mod.rs  msg.rs  user.rs
common/src/llm/: inference.rs  mod.rs  model_list.rs  role_list.rs
common/src/utilities/: cache_path.rs  config_path.rs  mod.rs
database/: .gitignore  Cargo.toml  test.md
database/src/: lib.rs  main.rs  server.rs
database/src/controllers/: mod.rs
database/src/controllers/conversation/: delete.rs  get.rs  init.rs  mod.rs  patch.rs  post.rs
database/src/controllers/engagement/: delete.rs  get.rs  init.rs  mod.rs  patch.rs  post.rs
database/src/controllers/user/: delete.rs  get.rs  init.rs  patch.rs  post.rs
database/src/types/: conversation.rs  engagement.rs  errors.rs  mod.rs  user.rs
docker/: Dockerfile.arm64_backend  Dockerfile.arm64_base  Dockerfile.arm64_database  Dockerfile.arm64_frontend  Dockerfile.backend  Dockerfile.base  Dockerfile.database  Dockerfile.frontend  docker-build.sh  docker-compose.yaml
frontend/: .env-example  Cargo.toml  Trunk.toml  build.rs  index.html  style.css
frontend/scss/: style.scss
frontend/src/: app.rs  main.rs
frontend/src/components/: index.rs  inner_wrapper.rs  mod.rs  utils.rs
frontend/src/components/chat/: index.rs  message.rs  mod.rs
frontend/src/components/header/: index.rs
frontend/src/components/home/: index.rs  init_model.rs  init_user.rs  mod.rs
frontend/src/components/home/inference_config/: index.rs
frontend/src/components/home/model_config/: gpu_select.rs  index.rs  init_model.rs  mod.rs  model_list_chip.rs  model_list_container.rs  model_list_grid.rs  model_list_item.rs
frontend/src/components/home/network_config/: index.rs  init_network.rs  mod.rs
frontend/src/components/home/overview/: args_area.rs  conversation_area.rs  index.rs  init_model.rs  init_user.rs  mod.rs
frontend/src/components/home/role_config/: index.rs  mod.rs  role_list_item.rs  role_list_tab.rs
frontend/src/components/home/user_config/: index.rs  init_user.rs  mod.rs
frontend/src/components/landing/: index.rs
frontend/src/components/sidebar/: index.rs  inference.rs  mod.rs  model.rs
frontend/src/components/sidebar/inference_config/: index.rs
frontend/src/components/sidebar/model_config/: gpu_select.rs  index.rs  model_list_chip.rs  model_list_container.rs  model_list_grid.rs  model_list_item.rs  types.rs
frontend/src/components/sidebar/network_config/: index.rs
frontend/src/components/sidebar/role_config/: index.rs  role_list_item.rs  role_list_tab.rs
frontend/src/components/sidebar/user_config/: index.rs
frontend/src/functions/: chat.rs  get_path.rs  mod.rs
frontend/src/functions/rest/: conversation.rs  engagement.rs  llm.rs  mod.rs  role.rs  user.rs
tauri/: Cargo.toml  build.sh  tauri.conf.json
tauri/capabilities/: migrated.json
tauri/permissions/: cache.toml  config.toml
tauri/src/: main.rs
wasm-server/: Cargo.toml
wasm-server/src/: main.rs
