[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend for a pure Rust chat app using Axum Webhooks (multi-user), HuggingFace/Candle for LLM inference, and Leptos for a WASM frontend."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.7", features = ["ws", "macros"] }
candle-core = { path = "../../candle/candle-core", features = ["cuda"] }
candle-examples = { path = "../../candle/candle-examples" }
candle-nn = { path = "../../candle/candle-nn" }
candle-transformers = { path = "../../candle/candle-transformers", features = ["cuda"] }
futures = "0.3.29"
hf-hub = "0.3.2"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tokenizers = "0.15"
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "0.2.11"
http-body-util = "0.1.0"
gloo-net = { version = "0.5.0", features = ["json"] }
pdf-extract = "0.7.2"
tauri = "1.5.4"
struct_iterable = "0.1.1"

common = {path = "../common" }
glob = "0.3.1"
serde_json = "1.0.111"
