[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend for a pure Rust chat app using Axum Webhooks (multi-user), HuggingFace/Candle for LLM inference, and Leptos for a WASM frontend."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
axum = { version = "0.7", features = ["ws", "macros"] }
candle-core = { version="0.4.1", features = ["cuda"] }
candle-examples = { version="0.4.1" }
candle-nn = { version="0.4.1" }
candle-transformers = { version="0.4.1", features = ["cuda"] }
futures = "0.3.29"
hf-hub = "0.3.2"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tokenizers = "0.15"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1.0.0"
shuttle-axum = "0.39.0"
shuttle-runtime = "0.39.0"
pdf-extract = "0.7.2"
tauri = "1.5.4"

common = {path = "../common" }
glob = "0.3.1"
serde_json = "1.0.111"
