[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "json", "sqlite", "chrono"] }
anyhow = "1"
serde = "1"
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tauri = "1.5.4"

common = {path = "../common" }