[package]
name = "fireside-chat"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1
# Enables link to optimizations
lto = true
# Optimize for binary size
opt-level = "s"
# Remove debug symbols
strip = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta" }

[dependencies]
tauri = { version = "2.0.0-beta" }

backend = {path = "../backend"}
database = {path = "../database"}
tauri-plugin-fs = "2.0.0-beta.12"
tauri-plugin-shell = "2.0.0-beta.10"
serde_json = "1.0.121"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
